# luciv_practice

./: README.md
.github/workflows/: build_fractal.yml  github-actions-demo.yml  shellcheck.yml
01_IO_flush/: README.md  experiment.sh  main  main.c  output.txt
02.Search_Engine/: README.md  import_spbu_umd.sh
02_Desktop_search/: README.md  import_spbu_umd.sh
03_Fractal/: CMakeLists.txt  fractal.c  fractal.h  image.c  image.h  main.c
